// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/date-picker/demo/basic.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select month" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span tabIndex="0" class="ant-calendar-picker"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  <br> <span class="ant-calendar-picker"><span><input readOnly="true" placeholder="Select week" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;

exports[`renders ./components/date-picker/demo/date-render.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span> <span tabIndex="0" class="ant-calendar-picker"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span> <span class="ant-calendar-picker"><span><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;

exports[`renders ./components/date-picker/demo/disabled.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input disabled="disabled" readOnly="true" placeholder="Select date" value="2015-06-06" class="ant-calendar-picker-input ant-input ant-input-disabled"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span class="ant-calendar-picker"><div><input disabled="disabled" readOnly="true" placeholder="Select date" value="2015-06" class="ant-calendar-picker-input ant-input ant-input-disabled"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span tabIndex="-1" class="ant-calendar-picker"><span class="ant-calendar-picker-input ant-input ant-input-disabled ant-calendar-picker-input ant-input ant-input-disabled"><input disabled="disabled" readOnly="true" placeholder="Start date" tabIndex="-1" value="2015-06-06" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  disabled="disabled" readOnly="true" placeholder="End date" tabIndex="-1" value="2015-06-06" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;

exports[`renders ./components/date-picker/demo/disabled-date.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select month" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span tabIndex="0" class="ant-calendar-picker" style="width:350px;"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;

exports[`renders ./components/date-picker/demo/extra-footer.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span> <span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span> <span tabIndex="0" class="ant-calendar-picker"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span> <span tabIndex="0" class="ant-calendar-picker" style="width:350px;"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
  <input
    readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
    </span> <span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select month" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
    </span>
    </div>
`;

exports[`renders ./components/date-picker/demo/format.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="2015/01/01" class="ant-calendar-picker-input ant-input"><i class="anticon anticon-cross-circle ant-calendar-picker-clear"></i><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="2015/01" class="ant-calendar-picker-input ant-input"><i class="anticon anticon-cross-circle ant-calendar-picker-clear"></i><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span tabIndex="0" class="ant-calendar-picker"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="2015/01/01" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End date" tabIndex="-1" value="2015/01/01" class="ant-calendar-range-picker-input">
  <i class="anticon anticon-cross-circle ant-calendar-picker-clear"></i><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;

exports[`renders ./components/date-picker/demo/mode.md correctly 1`] = `
<div><span mode="time" class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span tabIndex="0" class="ant-calendar-picker"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start month" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End month" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;

exports[`renders ./components/date-picker/demo/presetted-ranges.md correctly 1`] = `
<div><span tabIndex="0" class="ant-calendar-picker"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
  <input
    readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
    </span>
    <br> <span tabIndex="0" class="ant-calendar-picker" style="width:350px;"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
    <input
      readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
      </span>
</div>
`;

exports[`renders ./components/date-picker/demo/size.md correctly 1`] = `
<div>
  <div class="ant-radio-group ant-radio-group-default">
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Large</span></label>
    <label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><span class="ant-radio-button ant-radio-button-checked"><input type="radio" checked="checked" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Default</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Small</span></label>
  </div>
  <br>
  <br> <span class="ant-calendar-picker ant-calendar-picker-default"><div><input readOnly="true" placeholder="Select date" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span class="ant-calendar-picker ant-calendar-picker-default"><div><input readOnly="true" placeholder="Select Month" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span tabIndex="0" class="ant-calendar-picker ant-calendar-picker-default"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End date" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  <br> <span class="ant-calendar-picker ant-calendar-picker-default"><span><input readOnly="true" placeholder="Select Week" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;

exports[`renders ./components/date-picker/demo/start-end.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Start" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span> <span class="ant-calendar-picker"><div><input readOnly="true" placeholder="End" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
</div>
`;

exports[`renders ./components/date-picker/demo/time.md correctly 1`] = `
<div><span class="ant-calendar-picker"><div><input readOnly="true" placeholder="Select Time" value="" class="ant-calendar-picker-input ant-input"><span class="ant-calendar-picker-icon"></span></div>
</span>
<br> <span tabIndex="0" class="ant-calendar-picker" style="width:350px;"><span class="ant-calendar-picker-input ant-input ant-calendar-picker-input ant-input"><input readOnly="true" placeholder="Start Time" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-range-picker-separator"> ~ </span>
<input
  readOnly="true" placeholder="End Time" tabIndex="-1" value="" class="ant-calendar-range-picker-input"><span class="ant-calendar-picker-icon"></span></span>
  </span>
  </div>
`;
